solo falta un poco de mediaquery

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 			<div class="row">
 				<div class="col-md-12 col-xs-12 col-sm-12 text-center">
 					<h1 class="chicas">CHICAS QUE CAMBIAN EL MUNDO</h1>
-					<p>Participa en nuestras actividades</p>
-					<button class="btn btn-primary">Inscribete</button>
+					<p class="participa-en">¡Participa en nuestras actividades!</p>
+					<button class="btn btn-primary inscribete-uno">Inscribete</button>
 				</div>
 			</div>
 		</div>
@@ -56,17 +56,9 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-5 ">
-					<h1 class="code-girls">CODE GIRLS</h1>
-					<p class="texto-code-girls">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse</p><p>
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h1 class="code-girls text-center">CODE GIRLS</h1>
+					<p class="texto-code-girls">El Documental muestra el trabajo de diferentes equipos integradospor chicas de escuelas secundarias (provenientes de EEUU,Brasil, India, Mexico) que junto con un mentor o una mentora que acompaña su experiencia,disponen de tres meses para crear un plan de negocio y una aplicacion que resuelva problemas en sus comunidades, en el marco de la competencia technovation.</p><p>
+					De la competencia expuesta en el documental participaron 300 equipos, de los cuales 44 llegaron  la semifinal, luego seis resultaron finalistas y finalmente el ganador recibio un premio de 10.000 dolares.</p>
 				</div>
 			<div class="col-xs-12 col-sm-12 col-md-7">
 					<iframe class="video" width="840" height="560" src="https://www.youtube.com/embed/cRb5iel-3Ck" frameborder="0" allowfullscreen></iframe>
@@ -81,13 +73,10 @@
 					<img class="imagen-hacka" src="img/hackathon.jpg">
 				</div>
 				<div class="col-xs-12 col-sm-12 col-md-6 ">
-					<h1 class="hacka">HACKATHON</h1>
-					<p>Participa por nuestra hackathon "Love is respect"</p>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<!-- cambiar texto por el original -->
-					<button class="btn btn-primary">Inscribete</button>
+					<h1 class="hacka text-center">HACKATHON</h1>
+					<p class="participa">¡Participa por nuestra hackathon "Love is respect"!</p>
+					<p class="idea">Idea soluciones a las problematicas que te presentaremos, rodeada de chicas tan<br> geniales como tú. Nos reuniremos el 30 de septiembre desde las 10am.</p>
+					<button class="btn btn-primary inscribete-dos">Inscribete</button>
 					<!-- el boton tiene que ser mas grande -->
 				</div>
 			</div>
@@ -95,11 +84,11 @@
 	</section>
 	<section class="section-cuatro container-fluid">
 		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-8">
+			<div class="col-xs-12 col-sm-12 col-md-7">
 				<img class="imagen-contacto" src="img/made_with_code.jpg">
 				<!-- corregir la imagen es mas grande -->
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-4">
+			<div class="col-xs-12 col-sm-12 col-md-5">
 				<div class="contacto">
 					<h1 class="contacto">CONTACTO</h1>
 				<p class="parrafo-contacto"><strong>Code Girls</strong></p>
@@ -112,7 +101,7 @@
 				  	<input type="text" class="form-control" placeholder="Email">
 				  	<input type="text" class="form-control" placeholder="Asunto">
 				  	<input type="text" class="form-control mensaje" placeholder="Mensaje">
-				  	<button class="btn btn-primary">Enviar</button>
+				  	<button class="btn btn-primary enviar">Enviar</button>
 
 				  </div>
 				</form>
@@ -121,8 +110,7 @@
 		</div>
 	</section>
 	<footer>
-		<p class="parrafo-footer container-fluid">© 2016 Code Girls. Diseñado por <strong class="amarillo">Laboratoria</strong></p>
-		<!-- arreglar la letra -->
+		<p class="parrafo-footer container-fluid">© 2016 Code Girl. Diseñado por <span class="amarillo">Laboratoria.</span></p>
 	</footer>
 </body>
 </html>
